--- a/ui/public/style.css
+++ b/ui/public/style.css
@@ -317,6 +317,7 @@ textarea {
     grid-template-columns: 120px 280px 1fr;
     row-gap: 1rem;
     margin-bottom: 0.5rem;
+    margin-top: 0.5rem;
 }
 
 .form-buttons {
