--- a/ui/public/style.css
+++ b/ui/public/style.css
@@ -18,6 +18,55 @@ body {
     flex-direction: column;
 }
 
+.radiobox-input {
+    transform: scale(1.5);
+    margin-right: 0.3rem;
+    margin-left: 1rem;
+}
+
+.radiobox-div {
+    margin-bottom: 0.5rem;
+    margin-top: 0.5rem;
+    display: inline;
+    margin-right: 1rem;
+}
+
+.filter-div {
+    padding-top: 0.25rem;
+    padding-bottom: 0.25rem;
+    margin-top: 0.5rem;
+    margin-bottom: 0.75em;
+}
+
+.pagination {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 0.5rem;
+}
+
+    .pagination button {
+        background-color: white;
+        border: 1px solid #333;
+        color: black;
+        padding: 10px 20px;
+        text-decoration: none;
+        font-size: 1.2rem;
+        cursor: pointer;
+        transition: background-color 0.3s;
+        margin-left: 2px;
+        margin-right: 2px;
+        border-radius: 5rem;
+    }
+
+        .pagination button.active {
+            background-color: #3a9ee1;
+            color: white;
+        }
+
+        .pagination button:hover:not(.active) {
+            background-color: #ddd;
+        }
+
 nav{
 background-color: #333;
 }
@@ -132,8 +181,8 @@ h2 {
 }
 
 main {
-    padding-left: 2rem;
-    padding-right: 2rem;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
 }
 
 .table-list {
